--- a/eCloud/index.html
+++ b/eCloud/index.html
@@ -6,21 +6,22 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <link rel="icon" href="./favicon.ico" />
     <title>PAL Web Test Platform</title>
-    <link href="./css/app.1ca1f8c0.css" rel="preload" as="style" />
+    <link href="./css/app.fec1b6b3.css" rel="preload" as="style" />
     <link href="./css/chunk-vendors.e6d5936d.css" rel="preload" as="style" />
-    <link href="./js/app.07c0c854.js" rel="preload" as="script" />
-    <link href="./js/chunk-vendors.1a51838b.js" rel="preload" as="script" />
+    <link href="./js/app.2675c124.js" rel="preload" as="script" />
+    <link href="./js/chunk-vendors.9cd7552d.js" rel="preload" as="script" />
     <link href="./css/chunk-vendors.e6d5936d.css" rel="stylesheet" />
-    <link href="./css/app.1ca1f8c0.css" rel="stylesheet" />
+    <link href="./css/app.fec1b6b3.css" rel="stylesheet" />
   </head>
   <body>
     <noscript>
       <strong
-        >We're sorry but oort-helper doesn't work properly without JavaScript enabled. Please enable it to continue.
+        >We're sorry but oort-helper doesn't work properly without JavaScript
+        enabled. Please enable it to continue.
       </strong>
     </noscript>
     <div id="app"></div>
-    <script src="./js/chunk-vendors.1a51838b.js"></script>
-    <script src="./js/app.07c0c854.js"></script>
+    <script src="./js/chunk-vendors.9cd7552d.js"></script>
+    <script src="./js/app.2675c124.js"></script>
   </body>
 </html>
