--- a/eCloud/index.html
+++ b/eCloud/index.html
@@ -6,22 +6,21 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <link rel="icon" href="./favicon.ico" />
     <title>PAL Web Test Platform</title>
-    <link href="./css/app.b9b0bbc5.css" rel="preload" as="style" />
+    <link href="./css/app.2c3cbb61.css" rel="preload" as="style" />
     <link href="./css/chunk-vendors.e6d5936d.css" rel="preload" as="style" />
-    <link href="./js/app.7469c160.js" rel="preload" as="script" />
-    <link href="./js/chunk-vendors.aff620e0.js" rel="preload" as="script" />
+    <link href="./js/app.fb0233ab.js" rel="preload" as="script" />
+    <link href="./js/chunk-vendors.c88dd443.js" rel="preload" as="script" />
     <link href="./css/chunk-vendors.e6d5936d.css" rel="stylesheet" />
-    <link href="./css/app.b9b0bbc5.css" rel="stylesheet" />
+    <link href="./css/app.2c3cbb61.css" rel="stylesheet" />
   </head>
   <body>
     <noscript>
       <strong
-        >We're sorry but oort-helper doesn't work properly without JavaScript
-        enabled. Please enable it to continue.
+        >We're sorry but oort-helper doesn't work properly without JavaScript enabled. Please enable it to continue.
       </strong>
     </noscript>
     <div id="app"></div>
-    <script src="./js/chunk-vendors.aff620e0.js"></script>
-    <script src="./js/app.7469c160.js"></script>
+    <script src="./js/chunk-vendors.c88dd443.js"></script>
+    <script src="./js/app.fb0233ab.js"></script>
   </body>
 </html>
